--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,78 @@
 /* line 1, ../../compass/sass/styles.scss */
 body {
-  background-color: #1d96d7;
+  width: 100%;
+  height: 100%;
+  background: url("/static/images/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow-x: hidden;
+}
+
+/* line 11, ../../compass/sass/styles.scss */
+.navbar {
+  position: relative;
+}
+
+/* line 15, ../../compass/sass/styles.scss */
+.navbar-brand {
+  margin-top: -12px;
+}
+
+/* line 18, ../../compass/sass/styles.scss */
+.navbar-brand img {
+  width: 50px;
+  max-width: 100%;
+}
+
+/* line 22, ../../compass/sass/styles.scss */
+label, p, h1 {
+  color: #FFF !important;
+}
+
+/* line 25, ../../compass/sass/styles.scss */
+.icon {
+  font-size: 20px;
+  color: #FFF !important;
+}
+
+/* line 29, ../../compass/sass/styles.scss */
+.jumbotron {
+  background: url("/static/images/jumbotron.jpg");
+  opacity: 0.9;
+  padding-left: 50px;
+}
+
+/* line 34, ../../compass/sass/styles.scss */
+table {
+  color: #FFF;
+}
+
+/* line 38, ../../compass/sass/styles.scss */
+li {
+  list-style-type: none;
+}
+
+/* line 41, ../../compass/sass/styles.scss */
+.post-message {
+  word-wrap: break-word;
+  border: 1px solid #FFF;
+  vertical-align: middle !important;
+}
+
+/* line 46, ../../compass/sass/styles.scss */
+.post-user img {
+  max-width: 70%;
+}
+
+/* line 49, ../../compass/sass/styles.scss */
+.post-wrapper {
+  background-color: rgba(4, 70, 136, 0.8);
+  border: 2px solid #FFF;
+}
+
+/* line 53, ../../compass/sass/styles.scss */
+.post-votes {
+  vertical-align: middle !important;
 }
